# OpenMLDB

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.yml  .prettierrc.yml  .style.yapf  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  MAINTAIN.md  Makefile  README-zh.md  README.md  README_cn.md  README_en.md  benchmark.sh  build.sh  build_java_client.sh  build_python_client.sh  codecov.yml  gen_code.h  gen_cpp.sh  get_deps.sh  index.md  log  mem_leak_check.sh  package-lock.json  package.json  pwd-zw.txt  pylintrc  read_properties.sh  rtidb_integration_test.properties  testres  ut.sh
contrib/: CMakeLists.txt
contrib/farmhash/: CMakeLists.txt
contrib/gflags-cmake/: CMakeLists.txt
contrib/glog-cmake/: CMakeLists.txt  find-gflags.patch
contrib/simdjson/: CMakeLists.txt  README
docs/: .gitignore  CNAME  LANGS.md  Makefile  README.md  ReleaseNotes.md  SUMMARY.md  environment.yml  index.md  mkdocs.yml  poetry.toml  pyproject.toml
docs/benchmark/: sql_query_benchmark.md
docs/blog_post/: ApacheHive-OfflineDataforOpenMLDB.md  README.md
docs/cn/: README.md  apiserver.md  built_in_function_develop_guide.md  cluster.md  compile.md  data_import.md  ddl_parser.md  deploy.md  docs_cn.md  index.html  java_sdk.md  mode_setting.md  performance_sensitive_mode.md  standalone.md
docs/docs/: index.md
docs/en/: SUMMARY.md  apiserver.md  built_in_function_develop_guide.md  cli.md  cluster.md  compile.md  conf.md  conf.py  data_import.md  deploy.md  index.rst  install_deploy.md  java_sdk.md  milestones.md  mode_setting.md  openmldb_quickstart.md  performance_sensitive_mode.md  python_sdk.md  rest_api.md  standalone.md  standalone_vs_cluster.md
docs/language_guide/: reference.md
docs/llvm/: block_ir_builder.md  compile_llvm_with_jit_events.md  expr_ir_builder.md  fn_let_ir_builder.md  list_ir_builder.md  memory_mgr.md  memory_pool.md  mutable_variable_ir_builder.md  null_check.md  optimize.md  row_ir_builder.md  types.md  udf_registry.md
docs/memory/: memory_pool.md
docs/operator/: batch_run_operator.md  operator_type.md  slide_window.md
docs/plan/: README.md  boundary.md  column_resolving.md  cross_node_op.md  ops.md  window.md
docs/runtime/: jit_runtime.md
docs/sdk/: sdk.md
docs/skew/: window数据倾斜优化.md
docs/storage/: schema.md  timeseries_engine.md
docs/syntax/: CMD.md  CREATE.md  EXPR.md  JOIN.md  README.md
docs/type/: type_system.md
docs/zh/: Makefile  README.md  SUMMARY.md  conf.py  index.rst  make.bat
docs/zh-hans/: SUMMARY.md
experiments/: CMakeLists.txt
experiments/bitcode/: bitcode_test.cc
experiments/boost/: boost_test.cc
experiments/iobuf/: test_iobuf.cc
experiments/parquet/: sql_demo.cc  sql_parquet_demo.cc
experiments/yaml/: yaml_cpp_test.cc
farmhash/: CMakeLists.txt  Makefile.am  Makefile.in  NEWS  Understanding_Hash_Functions  config.guess  config.h.in  config.sub  configure  configure.ac
farmhash/dev/: INSTRUCTIONS  PATCH  SELFTESTCityHash128WithSeed  SELFTESTFingerprint128  SELFTESTHash32  SELFTESTHash32WithSeed  SELFTESTHash64  SELFTESTHash64WithSeed  SELFTESTHash64WithSeeds  TESTBOILERPLATEHash32  TESTBOILERPLATEHash32WithSeed  TESTBOILERPLATEHash64  TESTBOILERPLATEHash64WithSeed  TESTBOILERPLATEHash64WithSeeds  WRAPPERuint32tconstcharssizetlen  WRAPPERuint32tconstcharssizetlenuint32tseed  WRAPPERuint32tconstcharssizetlenuint64tseed0uint64tseed1  WRAPPERuint64tconstcharssizetlen  WRAPPERuint64tconstcharssizetlenuint64tseed  WRAPPERuint64tconstcharssizetlenuint64tseed0uint64tseed1  basics.cc  builder.cc  cmake_m32  create-self-test  do-in-parallel  f.cc  farmhash.h  farmhashcc.cc  farmhashmk.cc  farmhashna.cc  farmhashns.cc  farmhashnt.cc  farmhashsa.cc  farmhashsu.cc  farmhashte.cc  farmhashuo.cc  farmhashxo.cc  fix-copyright  platform.cc  remove-from-to  (+1 more)
farmhash/src/: Makefile.am  Makefile.in  farm-test.cc
hybridse/: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CPPLINT.cfg  README-zh.md  README.md  cases  codecov.yml
hybridse/cases/: README.md
hybridse/docker/: Dockerfile  setup_cmake.sh
hybridse/examples/: CMakeLists.txt
hybridse/java/: pom.xml  prepare_release.sh
hybridse/src/: CMakeLists.txt  flags.cc  global_variables.cc  version.h.in
hybridse/tools/: compile_and_coverage.sh  hybridse_build.sh  hybridse_build_jsdk.sh  hybridse_core_test.sh  hybridse_deploy.sh  hybridse_examples_test.sh  micro_bench.sh  setup_thirdparty.sh  third-party.sh
monitoring/: .env  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  monitor.conf  monitor.py  openmldb_dashboard.json  openmldb_exporter.py  prod.Dockerfile  prod.env  prometheus_example.yml  pyproject.toml  src.Dockerfile  test.Dockerfile
monitoring/openmldb_collector/: __init__.py  collectors.py  configstore.py  metrics.py
monitoring/openmldb_exporter/: __init__.py  exporter.py
monitoring/openmldb_mixin/: .gitignore  README.md  mixin.libsonnet  openmldb_dashboard.json  prometheus_example.yml
monitoring/res/: prometheus.yml
monitoring/tests/: conftest.py  test_exporter.py  test_prometheus.py
python/openmldb_autofe/: README.md  environment.yml  setup.cfg  setup.py
src/: CMakeLists.txt  config.h  config.h.in  flags.cc  rtidb.cc  rtidb_main.cc  rtidb_perf.cc  version.h  version.h.in
src/analyser/: CMakeLists.txt  analyser.cc  analyser.h  analyser_test.cc
src/apiserver/: api_server_impl.cc  api_server_impl.h  api_server_test.cc  api_service_impl.cc  api_service_impl.h  interface_provider.cc  interface_provider.h  json_helper.cc  json_helper.h  json_writer.cc  json_writer.h
src/ast/: CMakeLists.txt  ast.h  ast_test.cc  fe_fn_grammar.h  fe_fn_grammar_test.cc  fe_grammer.h  fe_grammer_test.cc  fn_ast.h  fn_lexer.l  fn_parser.h  fn_parser.y  fn_parser_test.cc  lexer.l  parser.h  parser.y  test.cc
src/auth/: auth_utils.cc  auth_utils.h  authenticator.cc  authenticator.h  brpc_authenticator.cc  brpc_authenticator.h  refreshable_map.cc  refreshable_map.h  refreshable_map_test.cc  user_access_manager.cc  user_access_manager.h
stream/: CMakeLists.txt  README.md
(+6351 files in other folders)
